--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -177,6 +177,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
@@ -232,6 +233,7 @@
                             android:inputType="phone"
                             android:maxLength="9"
                             android:paddingStart="@dimen/dimen_10dp"
+                            android:paddingEnd="10dp"
                             android:tag="+256 "
                             android:textColor="@android:color/black"
                             android:textColorHint="@android:color/black" />
@@ -256,6 +258,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="textEmailAddress"
@@ -292,6 +295,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
@@ -318,6 +322,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
@@ -413,7 +418,7 @@
                         android:inputType="phone"
                         android:maxLength="9"
                         android:paddingStart="@dimen/dimen_10dp"
-                        android:paddingLeft="@dimen/dimen_10dp"
+                        android:paddingEnd="@dimen/dimen_10dp"
                         android:tag="+256 "
                         android:textColor="@android:color/black"
                         android:textColorHint="@android:color/black" />
