New drawable to be used in business account

--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -408,7 +408,7 @@
                                     android:id="@+id/imageMarker"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    app:srcCompat="@drawable/ic_pin"
+                                    app:srcCompat="@drawable/actual_location"
                                     tools:ignore="VectorDrawableCompat" />
 
                             </LinearLayout>
