Changed balance inquiry dialog and splash screen

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -18,7 +18,7 @@
             android:id="@+id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/password"
+            android:text="Change PIN"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/white" />
@@ -65,34 +65,54 @@
 
 
         <EditText
-            android:id="@+id/current_password"
+            android:id="@+id/current_pin"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:hint="@string/current_password"
-            android:inputType="textPassword|textNoSuggestions"
+            android:hint="Current PIN"
+            android:inputType="numberPassword"
             android:textColor="@color/textColorSecondary"
             android:textColorHint="@color/textColorPrimaryDark"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="15dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
+            android:maxLength="4"
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
             android:background="@drawable/edittext_corner"
             android:drawableLeft="@drawable/ic_lock" />
         <EditText
-            android:id="@+id/new_password"
+            android:id="@+id/new_pin"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:hint="@string/new_password"
-            android:inputType="textPassword|textNoSuggestions"
+            android:hint="New PIN"
+            android:inputType="numberPassword"
             android:textColor="@color/textColorSecondary"
             android:textColorHint="@color/textColorPrimaryDark"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="15dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
+            android:maxLength="4"
+            android:textAlignment="viewStart"
+            android:gravity="start|center_vertical"
+            android:layout_marginTop="@dimen/input_field_margin"
+            android:background="@drawable/edittext_corner"
+            android:drawableLeft="@drawable/ic_lock" />
+        <EditText
+            android:id="@+id/confirm_new_pin"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:hint="Confirm New PIN"
+            android:inputType="numberPassword"
+            android:textColor="@color/textColorSecondary"
+            android:textColorHint="@color/textColorPrimaryDark"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="15dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:maxLength="4"
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
@@ -120,8 +140,46 @@
             android:textAlignment="center"
             android:layout_gravity="center"
             android:textStyle="bold"
+            android:visibility="gone"
             android:background="@drawable/rectangular_green_solid" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/change_pin_buttons">
 
+            <Button
+                android:id="@+id/cancel"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_weight="1"
+                android:paddingEnd="10dp"
+                android:background="@drawable/round_button_red"
+                android:text="@string/cancel"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:drawableEnd="@drawable/ic_right_chevron" />
+
+
+            <Button
+                android:id="@+id/update"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="15dp"
+                android:paddingEnd="10dp"
+                android:background="@drawable/round_button_dark_green"
+                android:text="UPDATE"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:drawableEnd="@drawable/ic_right_chevron"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
