--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -126,6 +126,7 @@
                             android:orientation="vertical">
 
                             <RelativeLayout
+                                android:id="@+id/layout_security"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:paddingStart="10dp"
