--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -5,16 +5,26 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:layout_gravity="center_vertical"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/logo"
         android:alpha=".7"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_splash"
+        android:src="@drawable/emaishapay_logo_icon"
         android:layout_width="match_parent"
         android:paddingBottom="@dimen/dimen_20dp"
-        android:layout_height="match_parent" />
+        android:layout_height="140dp" />
+
+    <TextView
+        android:id="@+id/logo_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="eMaisha Pay"
+        android:gravity="center"
+        android:layout_below="@id/logo"
+        android:textSize="40sp"
+        android:textStyle="bold"/>
 
 
 
