--- a/app/src/main/res/layout/dialog_list_search.xml
+++ b/app/src/main/res/layout/dialog_list_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/windowBackground"
@@ -49,7 +50,35 @@
             android:textColor="@color/textColorSecondaryLight"
             android:textColorHint="@color/textColorPrimaryDark"
             android:textSize="16sp" />
-
+        <TextView
+            android:id="@+id/tv_add_new_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Add New Manufacturer"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            app:drawableStartCompat="@drawable/ic_add_white_24dp"
+            android:drawablePadding="10dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:background="@drawable/rectangular_green_solid"/>
+        <EditText
+            android:id="@+id/et_add_new_item"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@drawable/rounded_corners_edittext_light"
+            android:drawablePadding="5dp"
+            android:fontFamily="@font/josefin_sans"
+            android:imeOptions="actionSearch"
+            android:inputType="textNoSuggestions"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:layout_marginBottom="10dp"
+            android:visibility="gone"/>
         <ListView
             android:id="@+id/dialog_list"
             android:layout_width="match_parent"
@@ -62,26 +91,41 @@
 
     </LinearLayout>
 
+
     <LinearLayout
+        android:id="@+id/filter_dialog_footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_height="50dp"
+        android:layout_marginTop="18dp">
 
         <Button
             android:id="@+id/dialog_button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/colorPrimary"
-            android:fontFamily="@font/josefin_sans"
+            android:layout_weight="0.33"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@string/cancel"
-            android:textAlignment="center"
-            android:textAllCaps="false"
+            android:textAllCaps="true"
+            android:textSize="18sp"
             android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:background="@drawable/rectangular_red_solid"
+            android:gravity="center"/>
+
+
+        <Button
+            android:id="@+id/button_update"
+            android:layout_weight="0.33"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:text="Update"
+            android:textAllCaps="true"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:background="@drawable/rectangular_purple_solid"
+            android:gravity="center"
+            android:layout_marginStart="5dp"/>
 
     </LinearLayout>
-
 
 </LinearLayout>
