--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -448,7 +448,7 @@
                 android:visibility="visible">
 
                 <TextView
-                    android:id="@+id/txt_add_product"
+                    android:id="@+id/tx_add_product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
