--- a/app/src/main/res/layout/loan_card.xml
+++ b/app/src/main/res/layout/loan_card.xml
@@ -273,7 +273,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Disapproved"
+                android:text="Rejected"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
         </LinearLayout>
