--- a/app/src/main/res/layout/buy_inputs_dialog_input.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_input.xml
@@ -46,6 +46,7 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
