Changes made in transfer money , enter pin dialog, transfer money and loan card

--- a/app/src/main/res/layout/dialog_enter_pin.xml
+++ b/app/src/main/res/layout/dialog_enter_pin.xml
@@ -35,7 +35,8 @@
             android:inputType="numberPassword"
             android:padding="8dp"
             android:textColor="#000"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:maxLength="4"/>
 
 
 
