--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -46,6 +46,7 @@
                 android:layout_marginBottom="10dp">
 
                 <TextView
+                    android:id="@+id/text_transfer_to"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
