added validation on loan application amount

--- a/app/src/main/res/layout/fragment_wallet_loan_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_details.xml
@@ -132,12 +132,13 @@
                     android:autoSizeTextType="uniform" />
 
                 <TextView
+                    android:id="@+id/txtv_maximum"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/margin_10"
                     android:layout_weight="0.5"
                     android:gravity="end"
-                    android:text="UGX 80,000"
+                    android:text="UGX 80000"
                     android:textAlignment="textEnd"
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp"
