--- a/app/src/main/res/layout/fragment_shop_products.xml
+++ b/app/src/main/res/layout/fragment_shop_products.xml
@@ -54,8 +54,8 @@
         <ImageView
             android:id="@+id/image_no_product"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="50dp" />
+            android:layout_height="match_parent"
+            android:scaleType="center"/>
 
     </LinearLayout>
 
