--- a/app/src/main/res/layout/fragment_shop_sales.xml
+++ b/app/src/main/res/layout/fragment_shop_sales.xml
@@ -50,11 +50,11 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -65,9 +65,9 @@
 
                     <ImageView
                         android:id="@+id/image_no_product"
-                        android:layout_width="300dp"
-                        android:layout_height="200dp"
-                        android:layout_marginTop="50dp" />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="center"/>
 
                     <TextView
                         android:id="@+id/txt_no_products"
@@ -75,7 +75,6 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans"
                         android:gravity="center"
-                        android:text="Receive and track order from here"
                         android:textColor="#31244A"
                         android:textSize="24sp"
                         android:textStyle="bold"/>
