Added rotation animation to categories placeholder image, fixed display bug in buy home and made percentage offer gone on product card item

--- a/app/src/main/res/layout/buy_input_product_home_card.xml
+++ b/app/src/main/res/layout/buy_input_product_home_card.xml
@@ -58,7 +58,8 @@
                 android:text="16% OFF"
                 android:textColor="@android:color/white"
                 app:autoSizeTextType="uniform"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentEnd="true"
+                android:visibility="gone"/>
 
         </RelativeLayout>
         <TextView
