--- a/app/src/main/res/layout/fragment_buy_home.xml
+++ b/app/src/main/res/layout/fragment_buy_home.xml
@@ -92,16 +92,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:elevation="@dimen/dimen_5dp">
+                <LinearLayout
+                    android:id="@+id/layout_categories_placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/text_categories_placeholder"
+                <ImageView
+                    android:id="@+id/img_categories_placeholder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:src="@drawable/ic_loop"
                     android:layout_gravity="center"
+                    android:padding="20dp"/>
+                <TextView
+                    android:id="@+id/text_categories_placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center|bottom"
                     android:text="Loading Product Categories . . ."
-                    android:padding="30dp"
-                    android:drawablePadding="10dp"
-                    app:drawableTopCompat="@drawable/ic_loop" />
+                    android:padding="10dp" />
+                </LinearLayout>
                 <include layout="@layout/buy_inputs_homepage_9" />
 
             </FrameLayout>
