--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -64,11 +64,11 @@
                 android:paddingLeft="5dp">
 
                 <TextView
-
+                    android:id="@+id/txt_product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/josefin_sans"
-                    android:text="000"
+                    android:text="@string/product_name"
                     android:layout_marginBottom="4dp"
                     android:textColor="#31244A"
                     android:textSize="18sp"
@@ -121,12 +121,12 @@
                     android:layout_marginBottom="4dp">
 
                     <TextView
-                        android:id="@+id/txt_product_name"
+                        android:id="@+id/category_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.3"
                         android:fontFamily="@font/josefin_sans"
-                        android:text="@string/product_name"
+                        android:text="@string/category"
                         android:textColor="#B9B9B9"
                         android:textSize="14sp"/>
 
@@ -156,6 +156,7 @@
                         android:textSize="14sp"
                         android:layout_marginStart="5dp"/>
                     <TextView
+                        android:id="@+id/product_units"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans"
@@ -181,6 +182,7 @@
                         android:textColor="#B9B9B9"
                         android:textSize="14sp"/>
                     <TextView
+                        android:id="@+id/txt_per_unit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans"
